syntax = "proto3";
package satresult;
import "generic.proto";
import "formula.proto";
option go_package = "github.com/booleworks/logicng-service/sio/pb";

message SatResult {
    generic.ComputationState state = 1;
    bool satisfiable = 2;
    repeated string model = 3;
    repeated formula.Formula unsatCore = 4;
}
